# portfolio

./: .gitignore  Projects  README.md  Uni study  _config.yml
Online Investment Calculator/: Video Preview & Explanation.md
Online Investment Calculator/src/: App.jsx  index.css
Online Investment Calculator/src/util/: investment.js
OpenGL/Phong Texture Lighting Maps/: README.md
OpenGL/Phong Texture Lighting Maps/src/: main.cpp  window.cpp
OpenGL/Phong lighting model/: README.md
OpenGL/Phong lighting model/include/: config.h
OpenGL/Phong lighting model/src/: camera.h  main.cpp  object.h  shader.h  window.cpp  window.h
OpenGL/Solar system/: README.MD
OpenGL/Solar system/src/: main.cpp
Projects/: Arduino Automatic Ice Dispenser machine  Arduino automatic monitoring system with SQL.md  Python auto log-in bot  Python auto log-in bot.md
Projects/Arduino automatic monitoring system with SQL/: Arduino code with SQL  Main Code.ino  Overview.md  send.php
Projects/Automatic Ice Dispenser machine/: Overview of what it does.md
Projects/Currently in progress (openGL)/: CMakeLists.txt
Projects/Currently in progress (openGL)/header/: Shader.h  Window.h
Projects/Currently in progress (openGL)/src/: Mesh.cpp  Shader.cpp  Window.cpp  main.cpp
Projects/Currently in progress (openGL)/src/src2/: Mesh.cpp  Window.cpp
Projects/Data Analytics on CofficeShop relationship with customers/: CoffeeShop_code_Analysis.ipynb
Projects/Data Science/: File explain.md  Prediction.ipynb  Simple Linear regression project (1).ipynb  Simple Linear regression project.ipynb  Simple linear regression.ipynb
Projects/Data Science/Linear regression/: File explain.md
Projects/Data Science/Machine Learning/: note.md
Projects/Data Science/Multiple linear regression/: Multiple linear regression (with sklearn).ipynb  Multiple linear regression.ipynb  file explain.md
Projects/IoT Raspberry Pi /: Overview.md  code.py
Projects/IoT Raspberry Pi automatic monitoring system checker/: Overview.md
Projects/NYP Projects/Arduino automatic monitoring system with SQL/: Overview.md  send.php
Projects/OpenGL/: CMakeLists.txt  Main code  Main code.cpp
Projects/OpenGL/Source Files/: main.cpp
Projects/OpenGL/header/: Camera.h
Projects/OpenGL/include/: config.h
Projects/OpenGL/src/src2/: Camera.cpp  Shader.cpp
Uni study/: C_cheatsheet.c
assets/: img
(+52 files in other folders)
